<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pedro.sem1.MyActivity2$PlaceholderFragment">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/button"
        android:clickable="true"
        android:onClick="MyActivity"
        android:textSize="10sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:textColor="#ffffffff"
        android:background="#ff4b4b4b" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/button2"
        android:background="#ff4b4b4b"
        android:textSize="10sp"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:onClick="MyActivity3"
        android:layout_above="@+id/button3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:id="@+id/button3"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="MyActivity4"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/textView3"
        android:textColor="#ffffffff"
        android:background="#ff2e2e2e"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/button2"
        android:textSize="15dp"
        android:layout_toLeftOf="@+id/button"
        android:layout_alignBottom="@+id/button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="false"
        android:shadowColor="#ff4d0700"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/numticket"
        android:id="@+id/textView"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView5"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="15dp"
        android:background="#ffe3e8d5"
        android:visibility="invisible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:id="@+id/button4"
        android:singleLine="false"
        android:background="#ffe6f2ff"
        android:onClick="MyActivity2"
        android:layout_below="@+id/textView5"
        android:layout_toLeftOf="@+id/button"
        android:textSize="10dp"
        android:visibility="invisible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undo"
        android:id="@+id/button5"
        android:background="#ffe6f2ff"
        android:shadowColor="#ff040404"
        android:onClick="MyActivity2"
        android:layout_alignTop="@+id/button4"
        android:layout_toRightOf="@+id/button2"
        android:textSize="10dp"
        android:visibility="invisible" />

</RelativeLayout>
